src/test/ui/manually_drop_attr/manually_drop-dropck.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/manually_drop-dropck.rs:34:35
   |
LL |     manually_dropped_bad.0 = Some(&x);
   |                                   ^^ borrowed value does not live long enough
LL |
LL | }
   | -
   | |
   | `x` dropped here while still borrowed
   | borrow might be used here, when `manually_dropped_bad` is dropped and runs the `Drop` code for type `ManuallyDropWithDestructor`
   |
   = note: values in a scope are dropped in the opposite order they are defined

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
